--- a/06-ADAM-ETS-Multiplicative.Rmd
+++ b/06-ADAM-ETS-Multiplicative.Rmd
@@ -1,5 +1,5 @@
 # Pure multiplicative ADAM ETS {#ADAMETSPureMultiplicativeChapter}
-There is a reason why we discuss pure multiplicative ADAM ETS models separately: they are suitable for the positive data, especially when the level is low, yet they do not rely on prior data transformations (such as taking logarithms or applying a power transform), which makes them useful in a variety of contexts. However, the models discussed in this chapter are not easy to work with -- they typically do not have closed forms for the conditional h steps ahead mean and variance and do not have well-defined parameters space. Furthermore, they make more sense in conjunction with positive-valued distributions, although they also work with the Normal one. All these aspects are discussed in this chapter.
+There is a reason why we discuss pure multiplicative ADAM ETS models separately: they are suitable for the positive data, especially when the level is low, yet they do not rely on prior data transformations (such as taking logarithms or applying a power transform), which makes them useful in a variety of contexts. However, the models discussed in this chapter are not easy to work with -- they typically do not have closed forms for the conditional $h$ steps ahead mean and variance and do not have well-defined parameters space. Furthermore, they make more sense in conjunction with positive-valued distributions, although they also work with the Normal one. All these aspects are discussed in this chapter.
 
 
 ## Model formulation {#ADAMETSPureMultiplicative}
@@ -117,7 +117,7 @@ Furthermore, it can be shown for pure multiplicative models that:
     \hat{y}_{t+h} \leq \check{\mu}_{t+h} \leq \mu_{y,t+h} ,
     (\#eq:ETSADAMpointValueInequality)
 \end{equation}
-where $\mu_{y,t+h}$ is the conditional h steps ahead expectation, $\check{\mu}_{t+h}$ is the conditional h steps ahead geometric expectation (expectation in logarithms) and $\hat{y}_{t+h}$ is the point forecast [@Svetunkov2020ETS]. This gives an understanding that the point forecasts from pure multiplicative ETS models are always lower than geometric and arithmetic moments. If the variance of the error term is close to zero, the three elements in \@ref(eq:ETSADAMpointValueInequality) will be close to each other. Similar effect will be achieved when all smoothing parameters are close to zero. Moreover, the three elements will coincide for $h=1$ [@Svetunkov2020ETS].
+where $\mu_{y,t+h}$ is the conditional $h$ steps ahead expectation, $\check{\mu}_{t+h}$ is the conditional $h$ steps ahead geometric expectation (expectation in logarithms) and $\hat{y}_{t+h}$ is the point forecast [@Svetunkov2020ETS]. This gives an understanding that the point forecasts from pure multiplicative ETS models are always lower than geometric and arithmetic moments. If the variance of the error term is close to zero, the three elements in \@ref(eq:ETSADAMpointValueInequality) will be close to each other. Similar effect will be achieved when all smoothing parameters are close to zero. Moreover, the three elements will coincide for $h=1$ [@Svetunkov2020ETS].
 
 Finally, when it comes to conditional quantiles, the same term $\log(\mathbf{1}_k + \mathbf{g}_{m_i} \epsilon_{t+j})$ causes different set of problems, introducing convolutions of products of random variables. To better understand this issue, we consider persistence part of the equation for the ETS(M,N,N) model, which is:
 \begin{equation}
