--- a/07-ADAM-ETS-Mixed.Rmd
+++ b/07-ADAM-ETS-Mixed.Rmd
@@ -51,7 +51,7 @@ The idea behind this split is to distinguish the models by their complexity and 
 
 Class 3 models suffer from similar issues, but the situation worsens: there are no analytical solutions for the conditional mean and variance, and there are only approximations to these statistics.
 
-Class 4 models were discussed in Chapter \@ref(ADAMETSPureMultiplicative). They do not have analytical expressions for the moments, their conditional h steps ahead distributions represent a complex convolution of products of the basic ones, but they are appropriate for the positive data and become more valuable when the level of series is low, as already discussed in Chapter \@ref(ADAMETSPureMultiplicative).
+Class 4 models were discussed in Chapter \@ref(ADAMETSPureMultiplicative). They do not have analytical expressions for the moments, their conditional $h$ steps ahead distributions represent a complex convolution of products of the basic ones, but they are appropriate for the positive data and become more valuable when the level of series is low, as already discussed in Chapter \@ref(ADAMETSPureMultiplicative).
 
 Finally, Class 5 models might have infinite variances, specifically on long horizons and when the data has low values. Indeed, when the level in one of these models becomes close to zero, there is an increased chance of breaking the model due to the appearance of negative values. Consider an example of the ETS(A,A,M) model, which might have a negative trend, leading to negative values, which are then multiplied by the positive seasonal indices. This would lead to unreasonable values of states in the model. That is why in practice, these models should only be used when the level of the series is high. Furthermore, some Class 5 models are very difficult to estimate and are very sensitive to the smoothing parameter values. This mainly applies to the multiplicative trend models.
 
