--- a/18-ADAM-Forecasting.Rmd
+++ b/18-ADAM-Forecasting.Rmd
@@ -5,7 +5,7 @@ In this chapter, we start with an explanation of how the simulation paths can be
 
 
 ## Creating simulation paths {#ADAMForecastingSimulations}
-As mentioned earlier in previous chapters, for some models, the conditional h steps ahead moments do not have analytical expressions. For example, as discussed in Section \@ref(pureMultiplicativeExpectationAndVariance), pure multiplicative models typically do not have formulae for the conditional expectations and variance for longer horizons. The one exception is the ETS(M,N,N) model, where the point forecast corresponds to the conditional expectation for any horizon as long as the expectation of the error term $1+\epsilon_t$ is equal to one. This problem is not only important for the moments, but it also arises when quantiles of distributions are needed, especially for models with multiplicative error. In all these cases, when the moments and/or quantiles are not available analytically, they need to be obtained via other means. One of those is simulating many trajectories and then calculating moments numerically.
+As mentioned earlier in previous chapters, for some models, the conditional $h$ steps ahead moments do not have analytical expressions. For example, as discussed in Section \@ref(pureMultiplicativeExpectationAndVariance), pure multiplicative models typically do not have formulae for the conditional expectations and variance for longer horizons. The one exception is the ETS(M,N,N) model, where the point forecast corresponds to the conditional expectation for any horizon as long as the expectation of the error term $1+\epsilon_t$ is equal to one. This problem is not only important for the moments, but it also arises when quantiles of distributions are needed, especially for models with multiplicative error. In all these cases, when the moments and/or quantiles are not available analytically, they need to be obtained via other means. One of those is simulating many trajectories and then calculating moments numerically.
 
 ### Simulating trajectories {#ADAMForecastingExpectationSimulations}
 The general idea of this approach is based on discussion in Section \@ref(ADAMUncertaintySimulation): we use the estimated parameters, the last obtained state vector (level, trend, seasonal, ARIMA components etc.) and the estimate of the scale of distribution to generate the possible paths of the data for the next $h$ observations. The simulation itself is done in several steps:
@@ -73,7 +73,7 @@ lines(apply(y$data,1,quantile,0.975),
       col="grey", lwd=2, lty=2)
 ```
 
-Based on the plot in Figure \@ref(fig:adamForecastSimulated), we can see what the conditional h steps ahead expectation (black line) and what the 95% prediction interval will be for the data based on the ETS(M,M,N) model with the parameters mentioned above.
+Based on the plot in Figure \@ref(fig:adamForecastSimulated), we can see what the conditional $h$ steps ahead expectation (black line) and what the 95% prediction interval will be for the data based on the ETS(M,M,N) model with the parameters mentioned above.
 
 Similar paths are produced by `forecast()` function for `adam` class in the package `smooth`. If you need to extract them for further analysis, they are returned in the object `scenarios` if the parameters `interval="simulated"` and `scenarios=TRUE` are set.
 
@@ -85,12 +85,12 @@ We have already discussed how to obtain conditional expectation and variance in 
 The general rule that applies to ADAM in terms of generating conditional expectations is that if you deal with the pure additive model, then you can produce forecasts analytically. This not only applies to ETS but also to ARIMA (Subsection \@ref(ADAMARIMARecursiveMoments)) and regression (Section \@ref(ADAMXConventionalConditionalMoments)). If the model has multiplicative components (such as multiplicative error, or trend, or seasonality) or is formulated in logarithms (for example, ARIMA in logarithms), then simulations should be preferred (Section \@ref(ADAMForecastingSimulations)) - the point forecasts from these models would not necessarily correspond to the conditional expectations.
 
 ### Explanatory variables
-If the model contains explanatory variables, then the h steps ahead conditional expectations should use them in the calculation. The main challenge in this situation is that future values might not be known in some cases. This has been discussed in Section \@ref(ADAMXConventionalConditionalMoments). Practically speaking, if the user provides the holdout sample values of explanatory variables, the `forecast.adam()` method will use them in forecasting. If they are not provided, the function will produce forecasts for each of the explanatory variables via the `adam()` function and use the conditional h steps ahead expectations in forecasting.
+If the model contains explanatory variables, then the $h$ steps ahead conditional expectations should use them in the calculation. The main challenge in this situation is that future values might not be known in some cases. This has been discussed in Section \@ref(ADAMXConventionalConditionalMoments). Practically speaking, if the user provides the holdout sample values of explanatory variables, the `forecast.adam()` method will use them in forecasting. If they are not provided, the function will produce forecasts for each of the explanatory variables via the `adam()` function and use the conditional $h$ steps ahead expectations in forecasting.
 
 ### Conditional variance and scale {#ADAMForecastingVariance}
-Similar to conditional expectations, as we have discussed in Sections \@ref(pureAdditiveExpectationAndVariance) and \@ref(pureMultiplicativeExpectationAndVariance), the conditional h steps ahead variance is in general available only for the pure additive models. While the conditional expectation might be required on its own to use as a point forecast, the conditional variance is typically needed to produce prediction intervals. However, it becomes useful only in cases of distributions that support convolution (addition of random variables), which limits its usefulness to pure additive models and to additive models applied to the data in logarithms. For example, if we deal with Inverse Gaussian distribution, then the h steps ahead values will not follow Inverse Gaussian distribution, and we would need to revert to simulations in order to obtain the proper statistics for it. Another situation would be a multiplicative error model that relies on Normal distribution - the product of Normal distributions is not a Normal distribution, so the statistics would need to be obtained using simulations again.
+Similar to conditional expectations, as we have discussed in Sections \@ref(pureAdditiveExpectationAndVariance) and \@ref(pureMultiplicativeExpectationAndVariance), the conditional $h$ steps ahead variance is in general available only for the pure additive models. While the conditional expectation might be required on its own to use as a point forecast, the conditional variance is typically needed to produce prediction intervals. However, it becomes useful only in cases of distributions that support convolution (addition of random variables), which limits its usefulness to pure additive models and to additive models applied to the data in logarithms. For example, if we deal with Inverse Gaussian distribution, then the $h$ steps ahead values will not follow Inverse Gaussian distribution, and we would need to revert to simulations in order to obtain the proper statistics for it. Another situation would be a multiplicative error model that relies on Normal distribution - the product of Normal distributions is not a Normal distribution, so the statistics would need to be obtained using simulations again.
 
-If we deal with pure additive model with either Normal, Laplace, S or Generalised Normal distributions, then the formulae derived in Section \@ref(pureAdditiveExpectationAndVariance) can be used to produce h steps ahead conditional variance. Having obtained those values, we can then produce conditional h steps ahead scales for the distributions (which would be needed, for example, to generate quantiles), using the relations between the variance and scale in those distributions (discussed in Section \@ref(ADAMETSAdditiveDistributions)):
+If we deal with pure additive model with either Normal, Laplace, S or Generalised Normal distributions, then the formulae derived in Section \@ref(pureAdditiveExpectationAndVariance) can be used to produce $h$ steps ahead conditional variance. Having obtained those values, we can then produce conditional $h$ steps ahead scales for the distributions (which would be needed, for example, to generate quantiles), using the relations between the variance and scale in those distributions (discussed in Section \@ref(ADAMETSAdditiveDistributions)):
 
 1. Normal: scale is $\sigma^2_h$;
 2. Laplace: $s_h = \sigma_h \sqrt{\frac{1}{2}}$;
@@ -114,7 +114,7 @@ In the case of the scale model (Chapter \@ref(ADAMscaleModel)), the situation be
 Note the difference between $\sigma_{t+h}^2$ and $\sigma_{h}^2$ in our notations - the former is the variance of the error term for the specific step $t+h$, while the latter is the conditional variance $h$ steps ahead, which is derived based on the assumption of homoscedasticity.
 :::
 
-Making that substitution leads to the following analytical formula for the h steps ahead conditional variance in the case of the scale model:
+Making that substitution leads to the following analytical formula for the $h$ steps ahead conditional variance in the case of the scale model:
 \begin{equation}
     \text{V}(y_{t+h}|t) = \sum_{i=1}^d \left(\mathbf{w}_{m_i}^\prime \sum_{j=1}^{\lceil\frac{h}{m_i}\rceil-1} \mathbf{F}_{m_i}^{j-1} \mathbf{g}_{m_i} \mathbf{g}^\prime_{m_i} (\mathbf{F}_{m_i}^\prime)^{j-1} \mathbf{w}_{m_i} \sigma_{t+h-j}^2 \right) + \sigma_{t+h}^2 .
     (\#eq:ETSADAMFullWithScaleModelVariance)
@@ -178,7 +178,7 @@ The simulated paths are then produced based on the generated values and the assu
 
 
 ### Semiparametric intervals
-The three approaches above assume that the residuals of the applied model are i.i.d. (see discussion in Chapter \@ref(diagnostics)). If this assumption is violated (for example, the residuals are autocorrelated), then the intervals might be miscalibrated (i.e. producing wrong values). In this case, we might need to use different approaches. One of these is the construction of **semiparametric** prediction intervals [see, for example, @Lee2014]. This approach relies on the in-sample multistep forecast errors discussed in Subsection \@ref(diagnosticsResidualsIIDExpectationMultiple). After producing $e_{t+j|t}$ for all in sample values of $t$ and for $j=1,\dots,h$, we can use these errors to calculate the respective h steps ahead conditional variances $\sigma_j^2$ for $j=1,\dots,h$. These values can then be inserted in the formula \@ref(eq:predictionIntervalGeneral) to get the desired prediction interval. The approach works well in the case of pure additive models, as it relies on specific assumed distribution. However, it might have limitations similar to those discussed earlier for the mixed models and the models with positively defined distributions (such as Log-Normal, Gamma and Inverse Gaussian). It can be considered a semiparametric alternative to the approximate method discussed above.
+The three approaches above assume that the residuals of the applied model are i.i.d. (see discussion in Chapter \@ref(diagnostics)). If this assumption is violated (for example, the residuals are autocorrelated), then the intervals might be miscalibrated (i.e. producing wrong values). In this case, we might need to use different approaches. One of these is the construction of **semiparametric** prediction intervals [see, for example, @Lee2014]. This approach relies on the in-sample multistep forecast errors discussed in Subsection \@ref(diagnosticsResidualsIIDExpectationMultiple). After producing $e_{t+j|t}$ for all in sample values of $t$ and for $j=1,\dots,h$, we can use these errors to calculate the respective $h$ steps ahead conditional variances $\sigma_j^2$ for $j=1,\dots,h$. These values can then be inserted in the formula \@ref(eq:predictionIntervalGeneral) to get the desired prediction interval. The approach works well in the case of pure additive models, as it relies on specific assumed distribution. However, it might have limitations similar to those discussed earlier for the mixed models and the models with positively defined distributions (such as Log-Normal, Gamma and Inverse Gaussian). It can be considered a semiparametric alternative to the approximate method discussed above.
 
 
 ### Nonparametric intervals
@@ -200,7 +200,7 @@ Another alternative to the parametric intervals uses the same matrix of multiste
 
 
 ### Complete parametric intervals {#ADAMForecastingPIComplete}
-So far, **all the intervals discussed above** relied on an unrealistic assumption that the parameters of the model are known. This is one of the reasons why the intervals produced for ARIMA and ETS are typically narrower than expected [see, for example, results of tourism competition, @Athanasopoulos2011]. But as we discussed in Section \@ref(ADAMUncertainty), there are ways of capturing the uncertainty of estimated parameters of the model and propagating it to the future uncertainty (e.g. to the conditional h steps ahead variance). As discussed in Section \@ref(adamRefitted), the more general approach is to create many in-sample model paths based on randomly generated parameters of the model. This way, we can obtain a variety of states for the final in-sample observation $T$ and then use those values to construct final prediction intervals. The simplest and most general way of producing intervals, in this case, is using simulations (as discussed earlier in Subsection \@ref(ADAMForecastingPISimulations)). The intervals produced via this approach will be wider than the conventional ones, and their width will be proportional to the uncertainty around the parameters. This also means that the intervals might become too wide if the uncertainty is not captured correctly (see discussion in Section \@ref(adamRefitted)). One of the main limitations of the approach is its computational time: it will be proportional to the number of simulation paths for both refitted model and prediction interval.
+So far, **all the intervals discussed above** relied on an unrealistic assumption that the parameters of the model are known. This is one of the reasons why the intervals produced for ARIMA and ETS are typically narrower than expected [see, for example, results of tourism competition, @Athanasopoulos2011]. But as we discussed in Section \@ref(ADAMUncertainty), there are ways of capturing the uncertainty of estimated parameters of the model and propagating it to the future uncertainty (e.g. to the conditional $h$ steps ahead variance). As discussed in Section \@ref(adamRefitted), the more general approach is to create many in-sample model paths based on randomly generated parameters of the model. This way, we can obtain a variety of states for the final in-sample observation $T$ and then use those values to construct final prediction intervals. The simplest and most general way of producing intervals, in this case, is using simulations (as discussed earlier in Subsection \@ref(ADAMForecastingPISimulations)). The intervals produced via this approach will be wider than the conventional ones, and their width will be proportional to the uncertainty around the parameters. This also means that the intervals might become too wide if the uncertainty is not captured correctly (see discussion in Section \@ref(adamRefitted)). One of the main limitations of the approach is its computational time: it will be proportional to the number of simulation paths for both refitted model and prediction interval.
 
 It is also theoretically possible to use other approaches for the intervals construction in case of complete uncertainty (e.g. "empirical" one for each of the set of parameters of the model), but they would be even more computationally expensive than the approach described above and will have the limitations similar to the discussed above (i.e. non-uniqueness of quantiles, sample size requirements etc).
 
@@ -324,12 +324,12 @@ Finally, the discussion from this section also widely applies to ADAM ARIMA and/
 There are other elements related to forecasting and taking uncertainty into account that we have not discussed in the previous sections. Here we discuss several special cases where forecasting approaches might differ from the conventional ones.
 
 ### Prediction interval for intermittent demand model
-When it comes to constructing prediction interval for the intermittent state space model (from Chapter \@ref(ADAMIntermittent)), then there is an important aspect that should be taken into account. Given that the model consists of two parts: demand sizes and demand occurrence, the prediction interval should take the uncertainty from both of them into account. In this case, we should first predict the probability of occurrence of demand for the h steps ahead and then decide what the width of the interval should be based on this probability. For example, if we estimate that the demand will occur with probability $\hat{p}_{t+h|t} = 0.8$, then this means that we expect that in 20% of the cases, we will observe zeroes. This should reduce the confidence level for the demand sizes. Formally speaking, this comes to the following equation:
+When it comes to constructing prediction interval for the intermittent state space model (from Chapter \@ref(ADAMIntermittent)), then there is an important aspect that should be taken into account. Given that the model consists of two parts: demand sizes and demand occurrence, the prediction interval should take the uncertainty from both of them into account. In this case, we should first predict the probability of occurrence of demand for the $h$ steps ahead and then decide what the width of the interval should be based on this probability. For example, if we estimate that the demand will occur with probability $\hat{p}_{t+h|t} = 0.8$, then this means that we expect that in 20% of the cases, we will observe zeroes. This should reduce the confidence level for the demand sizes. Formally speaking, this comes to the following equation:
 \begin{equation}
     F_{y_{t+h}}(y_{t+h} \leq q) = \hat{p}_{t+h|t} F_{z_{t+h}}(z_{t+h} \leq q) +(1 -\hat{p}_{t+h|t}),
     (\#eq:statCDF)
 \end{equation}
-where $F_{y_{t+h}}(\cdot)$ is the cumulative distribution function of demand, $F_{z_{t+h}}(\cdot)$ is the cumulative distribution function of the demand sizes, $\hat{p}_{t+h|t}$ is the h steps ahead expected probability of occurrence and $q$ is the quantile of distribution. In the formula \@ref(eq:statCDF), we know the expected probability and we know the confidence level $F_{y_{t+h}}(y_{t+h} \leq q)$. The unknown element is the $1-\alpha = F_{z_{t+h}}(z_{t+h} \leq q)$. So after regrouping elements we get:
+where $F_{y_{t+h}}(\cdot)$ is the cumulative distribution function of demand, $F_{z_{t+h}}(\cdot)$ is the cumulative distribution function of the demand sizes, $\hat{p}_{t+h|t}$ is the $h$ steps ahead expected probability of occurrence and $q$ is the quantile of distribution. In the formula \@ref(eq:statCDF), we know the expected probability and we know the confidence level $F_{y_{t+h}}(y_{t+h} \leq q)$. The unknown element is the $1-\alpha = F_{z_{t+h}}(z_{t+h} \leq q)$. So after regrouping elements we get:
 \begin{equation}
     F_{z_{t+h}}(z_{t+h} \leq q) = \frac{F_{y_{t+h}}(y_{t+h} \leq q) -(1 -\hat{p}_{t+h|t})}{\hat{p}_{t+h|t}},
     (\#eq:statCDFDemandSizes)
@@ -422,7 +422,7 @@ This example is provided for demonstration purposes only. To see if the approach
 
 
 ### Confidence interval
-Finally, we can construct a confidence interval for some statistics. In general, it can be built for the mean, a parameter, fitted values, etc. In our context, we might be interested in the confidence interval for the conditional h steps ahead expectation. This implies that we are interested in the uncertainty of the line, not of the actual values, which can only be constructed for the model that takes the uncertainty of parameters into account (as discussed in Chapter \@ref(ADAMUncertainty)). The construction of confidence interval, in this case, relies on the Normal distribution (because of Central Limit Theorem), as long as the basic assumptions for the model and CLT are satisfied [see Section 6.2 and Chapter 15 of @SvetunkovSBA]. Technically speaking, the construction of confidence interval comes to capturing the model uncertainty discussed in Chapter \@ref(ADAMUncertainty).
+Finally, we can construct a confidence interval for some statistics. In general, it can be built for the mean, a parameter, fitted values, etc. In our context, we might be interested in the confidence interval for the conditional $h$ steps ahead expectation. This implies that we are interested in the uncertainty of the line, not of the actual values, which can only be constructed for the model that takes the uncertainty of parameters into account (as discussed in Chapter \@ref(ADAMUncertainty)). The construction of confidence interval, in this case, relies on the Normal distribution (because of Central Limit Theorem), as long as the basic assumptions for the model and CLT are satisfied [see Section 6.2 and Chapter 15 of @SvetunkovSBA]. Technically speaking, the construction of confidence interval comes to capturing the model uncertainty discussed in Chapter \@ref(ADAMUncertainty).
 
 #### Example in R
 The only way how the confidence interval can be constructed for ADAM is via the `reforecast()` function. Consider the example with ADAM ETS(A,Ad,N) on `BJSales` data as in Section \@ref(ADAMForecastingPIExample):
