--- a/04-ETS-Methods.Rmd
+++ b/04-ETS-Methods.Rmd
@@ -268,7 +268,7 @@ kableTable <- kableExtra::kable(etsMultiplicativeTable, escape=FALSE, caption="M
 kable_styling(kableTable, font_size=12, protect_latex=TRUE, latex_options="scale_down", table.envir="sidewaystable")
 ```
 
-From a statistical point of view, formulae in Tables \@ref(tab:ETSAdditiveError) and \@ref(tab:ETSMultiplicativeError) correspond to the "true models" (see Section \@ref(modelsMethods)), they explain the models underlying potential data, but when it comes to their construction and estimation, the $\epsilon_t$ is substituted by the estimated $e_t$ (which is calculated differently depending on the error type), and time series components and smoothing parameters are also replaced by their estimates (e.g. $\hat{\alpha}$ instead of $\alpha$). However, if the values of these models' parameters were known, it would be possible to produce point forecasts and conditional h steps ahead expectations from these models, which are summarised in Table \@ref(tab:ETSModelsForecasts) with the following elements:
+From a statistical point of view, formulae in Tables \@ref(tab:ETSAdditiveError) and \@ref(tab:ETSMultiplicativeError) correspond to the "true models" (see Section \@ref(modelsMethods)), they explain the models underlying potential data, but when it comes to their construction and estimation, the $\epsilon_t$ is substituted by the estimated $e_t$ (which is calculated differently depending on the error type), and time series components and smoothing parameters are also replaced by their estimates (e.g. $\hat{\alpha}$ instead of $\alpha$). However, if the values of these models' parameters were known, it would be possible to produce point forecasts and conditional $h$ steps ahead expectations from these models, which are summarised in Table \@ref(tab:ETSModelsForecasts) with the following elements:
 
 - Conditional one step ahead expectation $\mu_{y,t} \equiv \mu_{y,t|t-1}$;
 - Multiple steps ahead point forecast $\hat{y}_{t+h}$;
@@ -436,12 +436,12 @@ for(i in 1:6){
 
 This simple simulation shows that the smoothing parameter in ETS(A,N,N) controls the variability in the data (Figure \@ref(fig:DGPetsANNExample)): the higher $\alpha$ is, the higher variability is and less predictable the data becomes. With the higher values of $\alpha$, the level changes faster, leading to increased uncertainty about the future values.
 
-When it comes to the application of this model to the data, the conditional h steps ahead mean corresponds to the point forecast and is equal to the last observed level:
+When it comes to the application of this model to the data, the conditional $h$ steps ahead mean corresponds to the point forecast and is equal to the last observed level:
 \begin{equation}
     \mu_{y,t+h|t} = \hat{y}_{t+h} = l_{t} ,
   (\#eq:ETSANNForecast)
 \end{equation}
-this holds because it is assumed (see Section \@ref(assumptions)) that $\mathrm{E}(\epsilon_t)=0$, which implies that the conditional h steps ahead expectation of the level in the model is (from the second equation in \@ref(eq:ETSANN)):
+this holds because it is assumed (see Section \@ref(assumptions)) that $\mathrm{E}(\epsilon_t)=0$, which implies that the conditional $h$ steps ahead expectation of the level in the model is (from the second equation in \@ref(eq:ETSANN)):
 \begin{equation}
   \mathrm{E}(l_{t+h-1}|t) = l_t + \mathrm{E}(\alpha\sum_{j=1}^{h-2}\epsilon_{t+j}|t) = l_t .
   (\#eq:ETSANNForecasthStepsAhead)
@@ -514,7 +514,7 @@ An alternative to \@ref(eq:ETSMNN) would be the ETS(A,N,N) model \@ref(eq:ETSANN
 \end{equation}
 However, to produce forecasts from \@ref(eq:ETSANNLogs), exponentiation is needed, making the application of the model more difficult than needed. The ETS(M,N,N), on the other hand, does not rely on exponentiation, making it more practical and safe in cases when the model produces very high values (e.g. `exp(1000)` returns infinity in R).
 
-Finally, the conditional h steps ahead mean of ETS(M,N,N) corresponds to the point forecast and is equal to the last observed level, but only if $\mathrm{E}(1+\epsilon_t)=1$:
+Finally, the conditional $h$ steps ahead mean of ETS(M,N,N) corresponds to the point forecast and is equal to the last observed level, but only if $\mathrm{E}(1+\epsilon_t)=1$:
 \begin{equation}
     \mu_{y,t+h|t} = \hat{y}_{t+h} = l_{t} .
   (\#eq:ETSMNNForecast)
@@ -560,7 +560,7 @@ plot(y)
 
 The series in Figure \@ref(fig:ETSAANExample) demonstrates a trend that changes over time. If we need to produce forecasts for this data, we will capture the dynamics of the trend component via ETS(A,A,N) and then use the last values for the several steps ahead prediction. 
 
-The point forecast h steps ahead from this model is a straight line with a slope $b_t$ (as shown in Table \@ref(tab:ETSModelsForecasts) from Section \@ref(ETSTaxonomyMaths)):
+The point forecast $h$ steps ahead from this model is a straight line with a slope $b_t$ (as shown in Table \@ref(tab:ETSModelsForecasts) from Section \@ref(ETSTaxonomyMaths)):
 \begin{equation}
     \mu_{y,t+h|t} = \hat{y}_{t+h} = l_{t} + h b_t.
   (\#eq:ETSAANForecast)
@@ -802,7 +802,7 @@ The more useful state space model in ETS framework is the pure additive one, whi
   \end{aligned},
   (\#eq:ETSConventionalStateSpaceAdditive)
 \end{equation}
-where $\mathbf{w}$ is the measurement vector, showing how the components form the structure, $\mathbf{F}$ is the transition matrix, showing how components interact with each other and change over time (e.g. level is equal to the previous level plus trend) and $\mathbf{g}$ is the persistence vector, containing smoothing parameters. The conditional expectation and variance can be derived based on \@ref(eq:ETSConventionalStateSpaceAdditive), together with bounds on the smoothing parameters for any model that can be formulated in this way. And, as mentioned above, any pure additive ETS model can be written in the form \@ref(eq:ETSConventionalStateSpaceAdditive), which means that all of them have relatively simple analytical formulae for the statistics mentioned above. For example, the h steps ahead conditional expectation and variance of the model \@ref(eq:ETSConventionalStateSpaceAdditive) are [@Hyndman2008b, Chapter 6]:
+where $\mathbf{w}$ is the measurement vector, showing how the components form the structure, $\mathbf{F}$ is the transition matrix, showing how components interact with each other and change over time (e.g. level is equal to the previous level plus trend) and $\mathbf{g}$ is the persistence vector, containing smoothing parameters. The conditional expectation and variance can be derived based on \@ref(eq:ETSConventionalStateSpaceAdditive), together with bounds on the smoothing parameters for any model that can be formulated in this way. And, as mentioned above, any pure additive ETS model can be written in the form \@ref(eq:ETSConventionalStateSpaceAdditive), which means that all of them have relatively simple analytical formulae for the statistics mentioned above. For example, the $h$ steps ahead conditional expectation and variance of the model \@ref(eq:ETSConventionalStateSpaceAdditive) are [@Hyndman2008b, Chapter 6]:
 \begin{equation}
   \begin{aligned}
     \mu_{y,t+h} = \mathrm{E}(y_{t+h}|t) = & \mathbf{w}^\prime \mathbf{F}^{h-1} \mathbf{v}_{t} \\
