--- a/13-ADAM-Occurrence.Rmd
+++ b/13-ADAM-Occurrence.Rmd
@@ -408,7 +408,7 @@ where all the functions and vectors have been defined for the original ADAM \@re
 ### Additive vs multiplicative ETS for demand sizes
 The approach above supports any type of ADAM, including pure additive ETS (Section \@ref(ADAMETSPureAdditive)), pure multiplicative ETS (Section \@ref(ADAMETSPureMultiplicative)) or mixed ETS (Section \@ref(ADAMETSMixedModels)). While selection of the appropriate model can be automated, I argue that the better approach is to do it based on the understanding of the problem. In demand forecasting, typically we expect the values to be non-negative: people want to buy our product, and usually, the business does not want to buy products back from customers (unless we are dealing with a circular supply chain, but this is a different topic). This means that the pure multiplicative models should be preferred to the additive ones, as they will always produce meaningful results, as long as the assumption of positivity of $(1+\epsilon_{z,t})$ holds. This assumption is important because the intermittent demand would typically have low volume, and the model might generate unreasonable (negative) point and interval forecasts if a non-positive distribution is used for the error term (e.g. Normal). Thus, it is important to use Inverse Gaussian, or Gamma, or Log-Normal distribution (see discussion in Section \@ref(ADAMETSMultiplicativeDistributions)) for the error term of the demand sizes part of the model when the volume of data is low, and you expect the non-zero values to be strictly positive.
 
-The main difficulty with pure multiplicative models arises from the construction point of view. As discussed in Section \@ref(pureMultiplicativeExpectationAndVariance), the point forecasts of such model, in general, do not correspond to the conditional h steps ahead expectations (the only exclusion is the ETS(M,N,N) model). At the same time, the construction of the model for demand sizes assumes that the conditional expectations are equal to point forecasts when demand is not observed. If this is violated, then \@ref(eq:iETSADAMStateSpaceConstruction) is no longer the correct way to construct the model. This problem becomes especially important for the models with the multiplicative trend, where the conditional expectation might differ from point forecasts substantially [@Svetunkov2020ETS]. Still, point forecasts can be considered proxies for the conditional expectations, especially when smoothing parameters are close to zero. For example, the conditional expectation coincides with the point forecast in the boundary case with $\alpha=0$ and $\beta=0$ in ETS(M,M,N). The higher the smoothing parameters are, the more significant discrepancy will be, implying that the model for the demand sizes is constructed incorrectly.
+The main difficulty with pure multiplicative models arises from the construction point of view. As discussed in Section \@ref(pureMultiplicativeExpectationAndVariance), the point forecasts of such model, in general, do not correspond to the conditional $h$ steps ahead expectations (the only exclusion is the ETS(M,N,N) model). At the same time, the construction of the model for demand sizes assumes that the conditional expectations are equal to point forecasts when demand is not observed. If this is violated, then \@ref(eq:iETSADAMStateSpaceConstruction) is no longer the correct way to construct the model. This problem becomes especially important for the models with the multiplicative trend, where the conditional expectation might differ from point forecasts substantially [@Svetunkov2020ETS]. Still, point forecasts can be considered proxies for the conditional expectations, especially when smoothing parameters are close to zero. For example, the conditional expectation coincides with the point forecast in the boundary case with $\alpha=0$ and $\beta=0$ in ETS(M,M,N). The higher the smoothing parameters are, the more significant discrepancy will be, implying that the model for the demand sizes is constructed incorrectly.
 
 The pure additive models do not have the issue with the conditional expectation and thus can be constructed easily in case of intermittent demand. But as discussed earlier, they might violate the non-negativity assumption of the model. So, in practice, they should be used with care.
 
