--- a/17-ADAM-SM.Rmd
+++ b/17-ADAM-SM.Rmd
@@ -86,7 +86,7 @@ If we assume that $\epsilon_t \sim \mathcal{N}(0,\sigma^2_t)$, then the general 
   \end{aligned},
   (\#eq:ADAMSMGeneral)
 \end{equation}
-where subscripts $E$, $A$ and $R$ denote components of ETS, ARIMA and Regression respectively. The main thing that unites all the parts of the model is that they should be pure multiplicative in order to avoid potential issues with negative numbers. The construction and estimation of the scale model in this case becomes similar to the one discussed for the ETS(A,N,N) example above. When it comes to forecasting of the conditional h steps ahead scale, given the limitations of the pure multiplicative model discussed in Section \@ref(pureMultiplicativeExpectationAndVariance), it needs to be obtained via simulations -- this way the forecast from the ADAM will coincide with the expectation, which in case of \@ref(eq:ADAMSMGeneral) will give the conditional h steps ahead scale. All the principles discussed in Sections \@ref(ADAMETSPureMultiplicative), \@ref(ADAMARIMAPureMultiplicative) and \@ref(ADAMXDynamic) can be used directly for the scale model without any limitations, and the estimation of the model can be done via maximisation of likelihood as shown in the example above (equation \@ref(eq:ETSANNScaleModelLogLik)).
+where subscripts $E$, $A$ and $R$ denote components of ETS, ARIMA and Regression respectively. The main thing that unites all the parts of the model is that they should be pure multiplicative in order to avoid potential issues with negative numbers. The construction and estimation of the scale model in this case becomes similar to the one discussed for the ETS(A,N,N) example above. When it comes to forecasting of the conditional $h$ steps ahead scale, given the limitations of the pure multiplicative model discussed in Section \@ref(pureMultiplicativeExpectationAndVariance), it needs to be obtained via simulations -- this way the forecast from the ADAM will coincide with the expectation, which in case of \@ref(eq:ADAMSMGeneral) will give the conditional $h$ steps ahead scale. All the principles discussed in Sections \@ref(ADAMETSPureMultiplicative), \@ref(ADAMARIMAPureMultiplicative) and \@ref(ADAMXDynamic) can be used directly for the scale model without any limitations, and the estimation of the model can be done via maximisation of likelihood as shown in the example above (equation \@ref(eq:ETSANNScaleModelLogLik)).
 
 Finally, ADAM can be expanded even further by introducing the occurrence part of the model (i.e. dealing with the time-varying scale of distribution in case of intermittent demand, discussed in Chapter \@ref(ADAMIntermittent)). This part will need to be introduced in the location model, while the scale model \@ref(eq:ADAMSMGeneral) can be used as-is in this case, applying it to the non-zero observations.
 
